syntax = "proto3";
package com.example.reactiveproject;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
//============================================================================================
//Request
message UserDescription{
  message id{
    string id = 1;
  }
  message name{
    string name = 2;
  }
  message phoneNumber{
    string id = 3;
  }
    string bio = 4;
    repeated ChatDescription chat = 5;
    repeated MessageDescription message = 6;
}

message UserUpdateRequest{
  UserDescription.id id = 1;
  UserDescription user = 2;
}

//Answer
message UserResponse{
  string id = 1;
  string name = 2;
  string phoneNumber = 3;
  string bio = 4;
  repeated string chat = 5;
  repeated string message = 6;
}
//============================================================================================
//Request
message MessageDescription{
  message id{
    string id = 1;
  }
  google.protobuf.Timestamp dateTime = 2;
  message text{
    string text = 3;
  }
  repeated string messageChatId = 4;
  repeated string messageUserId = 5;
}
message MessageUpdateRequest{
  MessageDescription.id id = 1;
  MessageDescription message = 2;
}

//Answer
message MessageResponse{
  string id = 1;
  google.protobuf.Timestamp dateTime = 2;
  string text = 3;
  repeated string messageChatId = 4;
  repeated string messageUserId = 5;
}

message MessageResponseList{
  repeated MessageResponse messagesList = 1;
}
//============================================================================================
//Request
message ChatDescription{
  message id{
    string id = 1;
  }
  message name{
    string name = 2;
  }
  repeated string messageIds =3;
  repeated string userIds = 4;
}
message ChatUpdateRequest{
  ChatDescription.id chatId = 1;
  UserDescription.id userId = 2;
}

//Answer
message ChatResponse{
  string id = 1;
  string name = 2;
  repeated string messageIds =3;
  repeated string userIds = 4;
}
message ChatResponseList{
  repeated ChatResponse chatList = 1;
}
//============================================================================================
//Answer
message FullChatResponse{
  ChatDescription chat = 1;
  repeated UserDescription userList = 2;
  repeated MessageDescription messageList = 3;
}
//============================================================================================
service UserService{
  rpc findUserById(UserDescription.id) returns (UserResponse);
  rpc findUserByUserName(UserDescription.name) returns (UserResponse);
  rpc findUserByPhoneNumber(UserDescription.phoneNumber) returns (UserResponse);
  rpc createUser(UserDescription) returns (google.protobuf.Empty);
  rpc deleteUser(UserDescription.id) returns (google.protobuf.Empty);
  rpc updateUser(UserUpdateRequest) returns (UserResponse);
}

service MessageService{
  rpc findMessage(MessageDescription.text) returns (MessageResponseList);
  rpc sendMessage(MessageDescription) returns (google.protobuf.Empty);
  rpc deleteMessage(MessageDescription.id) returns (google.protobuf.Empty);
  rpc editMessage(MessageUpdateRequest) returns (MessageResponse);
}

service ChatService{
  rpc findAllChats(google.protobuf.Empty) returns (ChatResponseList);
  rpc createChat(ChatDescription) returns (google.protobuf.Empty);
  rpc deleteChat(ChatDescription.id) returns (google.protobuf.Empty);
  rpc addUserToTheChat(ChatUpdateRequest) returns (google.protobuf.Empty);
  rpc deleteUserFromChat(ChatUpdateRequest) returns (google.protobuf.Empty);
  rpc getChatById(ChatDescription.id) returns (FullChatResponse);
}